--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,10 @@ body {
 
 /* Custom page CSS
 -------------------------------------------------- */
+body > .background {
+    background: white;
+}
+
 body > .container {
   padding: 0px 50px 0;
 }
@@ -40,7 +44,7 @@ code {
 
 #hero {
     height: 100vh;
-    position: relative;
+    position: fixed;
     width: 100%;
     z-index: -1;
     background-image: url("../images/golden_gate.jpg");
@@ -48,18 +52,19 @@ code {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    top: 0;
+    left: 0;
 }
 
 #hero-container {
     position: relative;
-    width: 800px;
-    top: calc(50% - (164px / 2));
-    left: calc(50% - (800px / 2));
+    width: 100%;
     text-align: center;
+    height: 100vh;
 }
 
 #hero-cover {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.60);
@@ -71,6 +76,10 @@ code {
     position: absolute;
     top: 60px;
     left: 30px;
+}
+
+.hero-items {
+    padding-top: calc(50vh - 170px / 2);
 }
 
 .hero-box#name {
@@ -91,3 +100,18 @@ code {
 .hero-box {
     color: #DDD;}
 
+.article-section {
+    height: 500px;
+    padding-top: 100px;
+    text-align: center;
+    background: #fff;
+}
+
+#about {
+}
+
+#experience {
+}
+
+#contact {
+}
