--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
-  background-color: #f5f5f5;
+  background-color: #222222;
 }
 
 
@@ -43,15 +43,15 @@ code {
 }
 
 #hero {
-    height: 100vh;
     position: fixed;
+    height: 100vh;
     width: 100%;
     z-index: -1;
     background-image: url("../images/golden_gate.jpg");
-    background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    background-size: cover;
     top: 0;
     left: 0;
 }
@@ -101,17 +101,67 @@ code {
     color: #DDD;}
 
 .article-section {
-    height: 500px;
+    height: 100vh;
     padding-top: 100px;
     text-align: center;
     background: #fff;
 }
 
 #about {
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/sather1.jpg");
+    background-position: 30% 0%;
+    border-width: 1px 0px 0px;
+    border-color: #444;
+    border-style: solid;
 }
 
 #experience {
+    position: relative;
+    border-width: 1px 0px;
+    border-color: #444;
+    border-style: solid;
+    height: 100%;
+}
+
+.background-image {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/editor-ception.png");
+    background-position: 15% 10%;
+    -webkit-filter: blur(2px);
+    -webkit-transform: scale(1.1);
+    -moz-filter: blur(2px);
+    -moz-transform: scale(1.1);
+    -o-filter: blur(2px);
+    -o-transform: scale(1.1);
+    filter: blur(2px);
+    transform: scale(1.1);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    overflow: auto;
+}
+
+.blur-guard {
+    -webkit-filter: blur(0px);
+    -moz-filter: blur(0px);
+    -o-filter: blur(0px);
+    filter: blur(0px);
+    z-index: 1;
+    position: relative;
 }
 
 #contact {
+    background: #003A70;
+    border-width: 1px 0px;
+    border-color: #444;
+    border-style: solid;
+}
+
+#contact a {
+    color: #719CF9;
+}
+
+.info-line {
+    display: block;
 }
