--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,19 +72,20 @@ code {
     width: 100%;
 }
 
-#hero-contact {
-    position: absolute;
-    top: 60px;
-    left: 30px;
-}
-
 .hero-items {
     padding-top: calc(50vh - 170px / 2);
 }
 
+@media (max-width:767px)
+{
+    .hero-items {
+        padding-top: calc(35vh - 170px / 2);
+    }
+}
+
 .hero-box#name {
     font-size: 4em;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     text-shadow: #333 1px 2px;
     font-weight: 600;
     color: #EDEDED;
@@ -107,6 +108,36 @@ code {
     background: #fff;
 }
 
+.emph {
+    color: #136BBC;
+}
+
+.fade {
+    opacity: 1;
+}
+
+.fade:hover {
+    opacity: 0.5;
+}
+
+#social-links {
+    margin-top: 60px;
+    height: 50px;
+}
+
+.social {
+    margin: 0px 20px;
+    height: 50px;
+    width: auto;
+    vertical-align: top;
+}
+
+.social-glyph {
+    margin: 0px 20px;
+    font-size: 54px;
+    color: white;
+    top: 0px;
+}
 #about {
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/sather1.jpg");
     background-position: 30% 0%;
@@ -121,6 +152,7 @@ code {
     border-color: #444;
     border-style: solid;
     height: 100%;
+    overflow: hidden;
 }
 
 .background-image {
@@ -151,6 +183,10 @@ code {
     position: relative;
 }
 
+.thumbnail p {
+    text-align:left;
+}
+
 #contact {
     background: #003A70;
     border-width: 1px 0px;
@@ -162,6 +198,9 @@ code {
     color: #719CF9;
 }
 
-.info-line {
-    display: block;
+@media (max-width:660px)
+{
+    .footer {
+        height:80px;
+    }
 }
