--- a/assets/css/scrolling-nav.css
+++ b/assets/css/scrolling-nav.css
@@ -6,9 +6,9 @@
 @media(min-width:767px) {
     .navbar {
         padding: 20px 0;
-        -webkit-transition: background .5s cubic-bezier(0.68, -0.55, 0.27, 1.55),padding .5s ease-in-out;
+        -webkit-transition: background .5s cubic-bezier(0.35, 0.32, 1, 1),padding .5s cubic-bezier(0.42, 0.4, 1, 1);
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        transition: background .5s ease-out,padding .5s ease-out;
+        transition: background .5s cubic-bezier(0.65, 0.65, 1, 1),padding .5s cubic-bezier(0, 0, 0.73, 0.76);
     
     }
 
