--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,8 +101,9 @@ code {
     color: #DDD;}
 
 .article-section {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     padding-top: 100px;
+    padding-bottom: 100px;
     text-align: center;
     background: #fff;
     border-width: 1px 0px 0px;
@@ -144,6 +145,7 @@ code {
 #about {
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/sather1.jpg");
     background-position: 30% 0%;
+    /* min-height: 0px; */
 }
 
 #experience {
