--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ code {
     height: 100vh;
     width: 100%;
     z-index: -1;
-    background-image: url("../images/golden_gate.jpg");
+    background-image: url("/assets/images/golden_gate.jpg");
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -142,7 +142,7 @@ code {
 }
 
 #about {
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/sather1.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url("/assets/images/sather1.jpg");
     background-position: 30% 0%;
     /* min-height: 0px; */
 }
@@ -154,7 +154,7 @@ code {
 }
 
 .background-image {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/editor-ception.png");
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("/assets/images/editor-ception.png");
     background-position: 3% 0%;
     -webkit-filter: blur(3px);
     -webkit-transform: scale(1.1);
