Add bower components, 61a page, analytics templates

--- a/css/main.scss
+++ b/css/main.scss
@@ -53,3 +53,4 @@ $on-laptop:        800px;
 ;
 
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "../bower_components/components-font-awesome/scss/font-awesome";
