Add 61a to navbar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,13 @@
             Students <span class="caret"></span></a>
           <ul class="dropdown-menu">
             {% for page in site.pages %}
-              {% if page.category == "cs61a" %}
+              {% if page.category == "cs61a" and page.tag == "current"%}
+              <li><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
+              {% endif %}
+            {% endfor %}
+            <li><p class="navbar-text">Past semesters</p></li>
+            {% for page in site.pages %}
+              {% if page.category == "cs61a" and page.tag != "current"%}
               <li><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
               {% endif %}
             {% endfor %}
