--- a/css/main.scss
+++ b/css/main.scss
@@ -49,7 +49,8 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "style"
 ;
 
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
