--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,37 +1,9 @@
-<footer class="site-footer">
-
+<footer class="footer">
   <div class="container">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="col-sm-4">
-      <ul class="contact-list">
-        <li>{{ site.title }}</li>
-        <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-      </ul>
-    </div>
-
-    <div class="col-sm-4">
-      <ul class="social-media-list">
-        {% if site.github_username %}
-        <li>
-          {% include icon-github.html username=site.github_username %}
-        </li>
-        {% endif %}
-
-        {% if site.twitter_username %}
-        <li>
-          {% include icon-twitter.html username=site.twitter_username %}
-        </li>
-        {% endif %}
-      </ul>
-    </div>
-
-    <div class="col-sm-4">
-      <p>Website © 2015-2016 Jerry Chen.</p>
-      <p>Built using <a href="https://jekyllrb.com">Jekyll</a>.</p>
-    </div>
-
+    <hr/>
+    <p class="text-muted">Website © 2015-2016 Jerry Chen. Built using <a
+      href="https://jekyllrb.com">Jekyll</a> and hosted by <a
+      href="https://github.com">GitHub Pages</a>.</p>
   </div>
 
 </footer>
