--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -3,3 +3,15 @@
         max-width: 970px;
     }
 }
+
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+}
