--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,10 +1,11 @@
 @media (min-width: 1200px) {
-    .container{
+    .container {
         max-width: 970px;
     }
 }
 
 body {
+    padding-top: 40px;
     /* Margin bottom by footer height */
     margin-bottom: 60px;
 }
@@ -27,4 +28,10 @@ body {
     color: #9E9E9E;
     margin-top: 0px;
     margin-bottom: 0px;
+}
+
+@media (max-width: 767px) {
+    .navbar .navbar-nav .navbar-text {
+        margin-left: 16px;
+    }
 }
