--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,2 +1,5 @@
 <script src="/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
+<script src="/bower_components/bootstrap-material-design/dist/js/material.min.js"></script> 
+<script src="/bower_components/bootstrap-material-design/dist/js/ripples.min.js"></script> 
+<script src="/js/script.js"></script>
