--- a/css/main.scss
+++ b/css/main.scss
@@ -55,5 +55,6 @@ $on-laptop:        800px;
 @import "../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 @import "../bower_components/components-font-awesome/scss/font-awesome.scss";
 @import "../bower_components/bootstrap-material-design/sass/bootstrap-material-design.scss";
+@import "../bower_components/bootstrap-material-design/sass/ripples.scss";
 
 @import "style"
