Fix header color for all cases

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -29,6 +29,8 @@ body {
     height: 100px;
 }
 
-.dropdown-header {
-    color: inherit;
+@media (max-width: 768px) {
+    .dropdown-header {
+        color: inherit;
+    }
 }
