--- a/_sass/hero.scss
+++ b/_sass/hero.scss
@@ -2,7 +2,7 @@
     text-align: center;
     background: #009688;
     color: #fff;
-    margin-bottom: 100px;
+    margin-bottom: 75px;
     padding: 75px 0px 75px 0px;
 }
 
@@ -25,4 +25,10 @@
 
 .hero .fade:hover {
     opacity: 0.7;
+}
+
+.hero hr {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
