--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -40,3 +40,11 @@ p {
     font-size: 18px;
     line-height: 1.8;
 }
+
+/* MD drop shadow */
+.navbar {
+    @extend .navbar;
+    -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    -moz-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
