Add experience info, move data to data folder

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -6,7 +6,7 @@
                     <div class="name">Jerry Chen</div>
                     <hr> </hr>
                     <div class="contact">
-                      {% for link in site.social %}
+                      {% for link in site.data.social %}
                       <a href="{{ link.url }}"><i
                          class="fa {{ link.icon}} fa-3x fade social-glyph" aria-hidden="true"></i></a>
                       {% endfor %}
