Final touches, prep for publishing

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <hr/>
     <p class="text-muted">Website © 2015-2016 Jerry Chen. Built using <a
       href="https://jekyllrb.com">Jekyll</a> and hosted by <a
-      href="https://github.com">GitHub Pages</a>.</p>
+      href="https://github.com/cjerry/cjerry.github.io">GitHub Pages</a>.</p>
   </div>
 
 </footer>
