--- a/_sass/showcase.scss
+++ b/_sass/showcase.scss
@@ -4,9 +4,9 @@
 
 .showcase-image {
     height: 200px;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
-    background-position: top center;
+    background-position: center center;
 }
 
 .showcase-header h3 {
