--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -61,3 +61,10 @@ p {
         font-size: 16px;
     }
 }
+
+a.anchor {
+    display: block;
+    position: relative;
+    top: -80px;
+    visibility: hidden;
+}
