--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,14 @@
 <footer class="footer">
   <div class="container">
     <hr/>
-    <p class="text-muted">Website © 2015-2017 Jerry Chen. Built using <a
-      href="https://jekyllrb.com">Jekyll</a> and hosted by <a
-      href="https://github.com/cjerry/cjerry.github.io">GitHub Pages</a>.</p>
+    <p class="text-muted">Copyright ©
+        <script type="text/javascript">
+            var d = new Date()
+            document.write(d.getFullYear())
+        </script>
+        Jerry Chen.
+        Built using <a href="https://jekyllrb.com">Jekyll</a> and hosted by
+        <a href="https://github.com/cjerry/cjerry.github.io">GitHub Pages</a>.
+    </p>
   </div>
-
 </footer>
