--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -102,6 +102,10 @@
     padding: $spacing-unit 0;
 }
 
+.footer p {
+    font-size: 14px;
+}
+
 .footer-heading {
     font-size: 18px;
     margin-bottom: $spacing-unit / 2;
