--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -219,6 +219,9 @@
 
 .post-content {
     margin-bottom: $spacing-unit;
+    p {
+        font-size: 14px;
+    }
 
     h2 {
         font-size: 32px;
