--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -220,7 +220,11 @@
 .post-content {
     margin-bottom: $spacing-unit;
     p {
-        font-size: 14px;
+        font-size: 16px;
+    }
+
+    li {
+        font-size: 16px;
     }
 
     h2 {
