Fix a few more references

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
         </script>
         Jerry Chen.
         Built using <a href="https://jekyllrb.com">Jekyll</a> and hosted by
-        <a href="https://github.com/cjerry/cjerry.github.io">GitHub Pages</a>.
+        <a href="https://github.com/jerryjrchen/jerryjrchen.github.io">GitHub Pages</a>.
     </p>
   </div>
 </footer>
