--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -25,7 +25,7 @@ layout: default
           <h3> {{ post.description }} </h3>
 
           <p class="post-meta">{{ post.date | date: "%b %-d, %Y" }}
-          <!--{% if post.categories != empty or post.tags != empty %}{% include category_links.html categories=post.categories tags=post.tags %}{% endif %}-->
+          {% if post.categories != empty or post.tags != empty %}{% include category_links.html categories=post.categories tags=post.tags %}{% endif %}
           </p>
         </header>
 
@@ -40,5 +40,7 @@ layout: default
       </li>
     {% endfor %}
   </ul>
+
+  {% include pagination.html %}
 
 </div>
